--- a/src/scss/layout/_columns.scss
+++ b/src/scss/layout/_columns.scss
@@ -25,6 +25,7 @@
 		min-width: 4rem;
 		flex-direction: column;
 		display: flex;
+		align-self: stretch;
 
 		/* fix for gutenberg */
 		margin-block-start: 0;
