feat: add config file for more control

--- a/src/scss/base/_accessibility.scss
+++ b/src/scss/base/_accessibility.scss
@@ -42,7 +42,8 @@ Helper classes for improving accessibility.
 
 /* Screen reader text
 ----------------------------------------------------------------*/
-.screen-reader-only {
+.screen-reader-only,
+.hidden_label > label {
 	border: 0;
 	clip: rect(1px, 1px, 1px, 1px);
 	clip-path: inset(50%);
