--- a/src/scss/forms/_shared.scss
+++ b/src/scss/forms/_shared.scss
@@ -1,29 +1,30 @@
+@use "../config" as *;
+
 input,
 select,
 textarea {
 	margin: 0;
-	border-width: var(--wp--custom--border-width--form-field, 1px);
-	border-color: var(--wp--custom--color--form-field-border, #8e8e8e);
-	border-radius: var(--wp--custom--border-radius--form-field, 0);
-	padding-top: var(--wp--custom--spacing--form-field, 0.11rem);
-	padding-bottom: var(--wp--custom--spacing--form-field, 0.11rem);
-	padding-left: var(--wp--custom--spacing--form-field, 0.11rem);
-	padding-right: var(--wp--custom--spacing--form-field, 0.11rem);
+	border-width: $form-field-border-width;
+	border-color: $form-field-border-color;
+	border-radius: $form-field-border-radius;
+	padding: $form-field-padding;
+	background-color: $form-field-bg-color;
 	width: 100%;
+	color: $form-field-text-color;
 
 	&:focus,
 	&:focus-within {
-		outline-color: var(--wp--preset--color--primary);
+		outline-color: $form-field-focus-color;
 	}
 }
 
 input[type="checkbox"],
 input[type="radio"] {
-	margin-top: var(--wp--preset--spacing--20, 0.25rem);
-	width: var(--wp--custom--form-choice-size, 1.125rem);
-	height: var(--wp--custom--form-choice-size, 1.125rem);
+	margin-top: $form-choice-spacing;
+	width: $form-choice-size;
+	height: $form-choice-size;
 	appearance: none;
-	background-color: var(--wp--preset--color--white, #fff);
+	background-color: $form-field-bg-color;
 	border-style: solid;
 	display: inline-block;
 	vertical-align: middle;
@@ -33,18 +34,17 @@ input[type="radio"] {
 	flex-shrink: 0;
 
 	&:checked {
-		background-color: var(--wp--preset--color--primary);
-		border-color: var(--wp--preset--color--primary);
+		background-color: $form-choice-checked-color;
+		border-color: $form-choice-checked-color;
 	}
 
 	&:focus {
-		outline-color: var(--wp--preset--color--primary);
-		outline-offset: 2px;
+		outline-color: $form-field-focus-color;
 	}
 }
 
 input[type="checkbox"] {
-	border-radius: var(--wp--custom--border-radius--form-choice, 0.25rem);
+	border-radius: $form-choice-border-radius;
 
 	&:checked {
 		background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z'/%3e%3c/svg%3e");
